<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity titles -->
    <string name="app_name">So Funny</string>
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">Image Grid Example</string>
    <string name="ac_name_image_pager">Image Pager Example</string>
    <string name="ac_name_image_gallery">Image Gallery Example</string>
    <!-- Labels -->
    <string name="label_activity_examples">Activity Examples</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="button_image_list">Image List</string>
    <string name="button_image_grid">Image Grid</string>
    <string name="button_image_pager">Image Pager</string>
    <string name="button_image_gallery">Image Gallery</string>
    <string name="button_funny_pics">Funny Pictures</string>
    <string name="button_jokes">Jokes</string>
    <string name="next">Next > </string>
    <string name="upload_image">Upload Image</string>
    <string name="previous">&lt; Previous</string>
    <string name="back">Back</string>
    <string name="publish">Publish</string>
    <string name="save">Save</string>
    <string name="browse">Click on Image to browse</string>
    <string name="add_joke">Add Joke</string>
    <string name="upload">Upload</string>
    <string name="share">Share</string>
    <string name="write_joke">Write Joke in Below Box</string>

</resources>