<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <GridView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="310dp"
        android:layout_weight="2"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_weight="1"
        android:baselineAligned="false" >

        <ImageButton
            android:id="@+id/btnIgPrev"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/overlay_button"
            android:src="@drawable/prev"
            android:text="@string/previous"
            android:textColor="#ffffff" />

        <ImageButton
            android:id="@+id/btnIgUpload"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/overlay_button"
            android:src="@drawable/upload"
            android:text="@string/upload_image"
            android:textColor="#ffffff" />

        <ImageButton
            android:id="@+id/btnIgNext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/overlay_button"
            android:src="@drawable/next"
            android:text="@string/next"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llIgAd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="#ff2222"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>