<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/joke"
        android:drawableRight="@drawable/joke"
       android:drawableTop="@drawable/joke"
       android:drawableBottom="@drawable/joke"
        android:paddingBottom="20dip"
        android:paddingLeft="10dip"
        android:textStyle="bold"
        android:textColor="#c8ff8080"
        android:paddingTop="20dip"
        android:text="@string/label_activity_examples"
        android:textSize="24dip" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dip"
        android:background="@drawable/overlay_button"
        android:onClick="onImageGridClick"
        android:text="@string/button_funny_pics"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <!--
         Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_margin="20dip"
        android:background="@drawable/overlay_button"
        android:onClick="onImagePagerClick"
        android:text="@string/button_image_pager"
        android:textColor="#ffffff"
        android:textSize="20dp" /
    -->

    <Button
        android:id="@+id/btnAhJokes"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_margin="20dip"
        android:background="@drawable/overlay_button"
        android:onClick="onImagePagerClick"
        android:text="@string/button_jokes"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/llHomeAd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="100dp"
        android:background="#ff2222"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>